--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,7 +2,7 @@ name: "Terraform Deploy"
 on:
   push:
     branches: ["main"]
-    
+
 jobs:
   terraform:
     name: "Terraform"
@@ -14,8 +14,10 @@ jobs:
 
       - name: Install AWS CLI
         run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
+          curl -sS "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip -q awscliv2.zip
+          sudo ./aws/install
+          rm -rf aws awscliv2.zip
 
       - name: Set up AWS Profile
         env:
