--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,8 +5,9 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform"
+    name: "Terraform Deploy"
     runs-on: ubuntu-latest
+    
     steps:
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
@@ -14,10 +15,11 @@ jobs:
 
       - name: Install AWS CLI
         run: |
-          curl -sS "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip -q awscliv2.zip
-          sudo ./aws/install --update
-          rm -rf aws awscliv2.zip
+          sudo apt-get update
+          sudo apt-get install -y awscli
+
+      - name: "Verify AWS CLI Installation"
+        run: aws --version
 
       - name: Set up AWS Profile
         env:
