--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,4 +49,4 @@ jobs:
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - name: Terraform Apply
         if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-        run: terraform apply -auto-approve -var aws_profile=printrevo-aws-profile -var rds_password=aGVsbG8td29yZA== -input=false
+        run: terraform apply -auto-approve -var aws_profile=printrevo-aws-profile -var rds_password=aGVsbG8td29yZA== 
