--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,11 @@ jobs:
       - name: Terraform Format
         run: terraform fmt -check
 
+        # Plan the changes required to reach the desired state of the configuration
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan -var aws_profile=printrevo-aws-profile -var rds_password=aGVsbG8td29yZA==
+
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - name: Terraform Apply
-        run: terraform apply -auto-approve -var aws_profile=printrevo-aws-profile -var rds_password=aGVsbG8td29yZA== 
+        run: terraform apply -auto-approve tfplan -var aws_profile=printrevo-aws-profile -var rds_password=aGVsbG8td29yZA== 
