enable basic services and ignored used services

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
 
         # Plan the changes required to reach the desired state of the configuration
       - name: Terraform Plan
-        run: terraform plan -out=tfplan -var aws_profile=printrevo-aws-profile -var rds_password=aGVsbG8td29yZA== -var environment=development
+        run: terraform plan -out=tfplan -var aws_profile=printrevo-aws-profile -var rds_password=aGVsbG8td29yZA==
 
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
