--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
+**.lock.*
 
 # Crash log files
 crash.log
@@ -23,3 +24,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+tfplan
+
+# Ignore system files
+**.DS_Store
