--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           terraform_version: "1.5.0"
 
       - name: Set execute permission for the script
-        run: chmod +x ./terraform.sh
+        run: chmod +x ./bin/terraform.sh
   
       - name: Run Terraform script
         run: ./bin/terraform.sh
