--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,16 @@
-name: "Terraform Deploy"
+name: Terraform Deploy
+
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
 
 jobs:
   terraform:
-    name: "Terraform Deploy"
+    name: Terraform Deploy
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -24,22 +24,48 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{env.AWS_REGION}}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
           mkdir -p ~/.aws
           echo "[printrevo-aws-profile]" > ~/.aws/credentials
           echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/credentials
           echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/credentials
 
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "1.5.0"
 
-      - name: Set execute permission for the script
+      - name: Retrieve environment variables from AWS Parameter Store
+        uses: aws-actions/aws-ssm-get-parameter@v1
+        with:
+          names: "rds_password"
+          with-decryption: true
+        id: ssm
+
+      - name: Export environment variables
+        run: echo "DB_PASSWORD=${{ steps.ssm.outputs.value }}" >> $GITHUB_ENV
+
+      - name: Use DB_PASSWORD in another step
+        run: echo "Using DB_PASSWORD: ${DB_PASSWORD}"
+
+      - name: Set execute permission for Terraform script
+        run: chmod +x ./terraform.sh
+
+      - name: Run Terraform script
+        run: ./terraform.sh
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Format
+        run: terraform fmt -check
+
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan -var aws_profile=printrevo-aws-profile -var rds_password=$DB_PASSWORD
+
+      - name: Set execute permission for the apply script
         run: chmod +x ./bin/terraform.sh
   
-      - name: Run Terraform script
+      - name: Run Terraform Apply
         run: ./bin/terraform.sh
-
