fixing terraform cicd

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -90,7 +90,7 @@ jobs:
         run: ./bin/terraform-import.sh dev || echo "Import script failed but continuing..."
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan -var aws_profile=printrevo-aws-profile -var rds_password=${{ steps.ssm.outputs.db_password }}
+        run: terraform plan -out=tfplan -var aws_profile=printrevo-aws-profile -var rds_password='${{ steps.ssm.outputs.db_password }}'
 
       - name: Set execute permission for the apply script
         run: chmod +x ./bin/terraform-apply.sh
