refactored the package convention

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,7 +68,11 @@ jobs:
           terraform_version: "1.5.0"
 
       - name: Initialize Terraform Backend (S3)
-        run: terraform init -reconfigure
+        run: terraform init \
+              -backend-config="bucket=printrevo-terraform-state-bucket" \
+              -backend-config="key=terraform.tfstate" \
+              -backend-config="region=${{ secrets.AWS_REGION }}" \
+              -backend-config="dynamodb_table=printrevo-terraform-lock-table"
 
       - name: Retrieve environment variables from AWS Parameter Store
         id: ssm
