--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -82,8 +82,8 @@ jobs:
           echo "DB_PASSWORD=$DB_PASSWORD" >> $GITHUB_ENV
           echo "::set-output name=db_password::$DB_PASSWORD"
 
-      - name: Terraform Format
-        run: terraform fmt -check
+      # - name: Terraform Format
+      #   run: terraform fmt -check
 
       - name: Terraform Validate
         run: terraform validate
