--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup AWS Profile
         run: |
           mkdir -p ~/.aws
-          echo "[printrevo-aws-profile]" > ~/.aws/credentials
+          echo "[printrevo-terraform]" > ~/.aws/credentials
           echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
           echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
           echo "[default]" > ~/.aws/config
@@ -95,7 +95,7 @@ jobs:
         run: ./bin/terraform-import.sh dev || echo "Import script failed but continuing..."
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan -var aws_profile=printrevo-aws-profile -var aws_region='${{ secrets.AWS_REGION }}' -var aws_access_key_id='${{ secrets.AWS_ACCESS_KEY_ID }}' -var aws_access_secret_key='${{ secrets.AWS_SECRET_ACCESS_KEY }}' -var rds_password='${{ steps.ssm.outputs.db_password }}'
+        run: terraform plan -out=tfplan -var aws_profile=printrevo-terraform -var aws_region='${{ secrets.AWS_REGION }}' -var aws_access_key_id='${{ secrets.AWS_ACCESS_KEY_ID }}' -var aws_access_secret_key='${{ secrets.AWS_SECRET_ACCESS_KEY }}' -var rds_password='${{ steps.ssm.outputs.db_password }}'
 
       - name: Set execute permission for the apply script
         run: chmod +x ./bin/terraform-apply.sh
