--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,42 +38,29 @@ jobs:
           echo "[default]" > ~/.aws/config
           echo "region = $AWS_REGION" >> ~/.aws/config
 
-      - name: Ensure S3 bucket for Terraform state exists
-        run: |
-            BUCKET_NAME="printrevo-terraform-state"
-            REGION="eu-central-1"
-            if ! aws s3api head-bucket --bucket "$BUCKET_NAME" 2>/dev/null; then
-              if [ "$REGION" == "us-east-1" ]; then
-                aws s3api create-bucket --bucket "$BUCKET_NAME"
-              else
-                aws s3api create-bucket --bucket "$BUCKET_NAME" --region "$REGION" --create-bucket-configuration LocationConstraint="$REGION"
-              fi
-              echo "S3 bucket $BUCKET_NAME created."
-            else
-              echo "S3 bucket $BUCKET_NAME already exists."
-            fi
+      # - name: Ensure S3 bucket for Terraform state exists
+      #   run: |
+      #       BUCKET_NAME="printrevo-terraform-state"
+      #       REGION="eu-central-1"
+      #       if ! aws s3api head-bucket --bucket "$BUCKET_NAME" 2>/dev/null; then
+      #         if [ "$REGION" == "us-east-1" ]; then
+      #           aws s3api create-bucket --bucket "$BUCKET_NAME"
+      #         else
+      #           aws s3api create-bucket --bucket "$BUCKET_NAME" --region "$REGION" --create-bucket-configuration LocationConstraint="$REGION"
+      #         fi
+      #         echo "S3 bucket $BUCKET_NAME created."
+      #       else
+      #         echo "S3 bucket $BUCKET_NAME already exists."
+      #       fi
 
-      - name: Create DynamoDB Table for Terraform Locking
-        run: |
-            aws dynamodb create-table \
-              --table-name printrevo-terraform-lock-table \
-              --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH \
-              --billing-mode PAY_PER_REQUEST \
-              --region ${{ secrets.AWS_REGION }} || echo "DynamoDB table already exists"
-    
+     
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "1.5.0"
 
       - name: Initialize Terraform Backend (S3)
-        run: |
-          terraform init \
-            -backend-config="bucket=printrevo-terraform-state" \
-            -backend-config="key=terraform.tfstate" \
-            -backend-config="region=${{ secrets.AWS_REGION }}" \
-            -backend-config="dynamodb_table=printrevo-terraform-lock-table"
+        run: TF_LOG=DEBUG terraform init
 
       - name: Retrieve environment variables from AWS Parameter Store
         id: ssm
