--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -80,7 +80,7 @@ jobs:
           SCHEDULE_NAME="EKSInstanceSchedule"
           SCHEDULE=$(aws scheduler list-schedules --query "Schedules[?Name=='$SCHEDULE_NAME'].Name" --output text)
           if [ -z "$SCHEDULE" ]; then
-            aws scheduler create-schedule --name "$SCHEDULE_NAME" --schedule-expression "cron(0 12-15,21-2 * * ? *)" --target '{"Arn":"arn:aws:scheduler:region:746669216623:schedule/EKSInstanceSchedule","RoleArn":"arn:aws:iam::746669216623:role/EKSInstanceScheduleRole"}'
+            aws scheduler create-schedule --name "$SCHEDULE_NAME" --schedule-expression "cron(0 12-15,21-2 * * ? *)" --target '{"Arn":"arn:aws:scheduler:region:746669216623:schedule/EKSInstanceSchedule","RoleArn":"arn:aws:iam::746669216623:role/EKSInstanceScheduleRole"}' --flexible-time-window "OFF"
             echo "Schedule $SCHEDULE_NAME created."
           else
             echo "Schedule $SCHEDULE_NAME already exists."
