--- a/modules/aws/eks/helm-template/ingress.yaml
+++ b/modules/aws/eks/helm-template/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-    - host: {{ .Values.ingress.host }}
+    - host: {{ .Values.ingress.hosts[0] }}
       http:
         paths:
           - path: /
