--- a/modules/aws/eks/helm-template/service.yaml
+++ b/modules/aws/eks/helm-template/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.name }}
+  name: {{ .Values.app.name }}
   namespace: {{ .Values.app.namespace }}
   labels:
     app: {{ .Values.app.name }}
