--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: printrevo-helm
+name: printrevo-infra
 description: A Helm chart for PrintRevo EKS services
 version: 0.1.0
 appVersion: 1.0.0
