--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -86,7 +86,7 @@ jobs:
         run: chmod +x ./bin/terraform-import.sh
 
       - name: Import Modules Services by Environment Tag
-        run: ./bin/terraform-import.sh dev printrevo-terraform ${{ secrets.GH_PAT }} ${{ secrets.AWS_REGION }} ${{ secrets.AWS_ACCESS_KEY_ID }} ${{ secrets.AWS_SECRET_ACCESS_KEY }} ${{ steps.ssm.outputs.db_password }} || echo "Import script failed but continuing..."
+        run: ./bin/terraform-import.sh dev printrevo-terraform '${{ secrets.GH_PAT }}' '${{ secrets.AWS_REGION }}' '${{ secrets.AWS_ACCESS_KEY_ID }}' '${{ secrets.AWS_SECRET_ACCESS_KEY }}' '${{ steps.ssm.outputs.db_password }}' || echo "Import script failed but continuing..."
 
       # - name: Set up Helm
       #   uses: azure/setup-helm@v3
