--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -106,4 +106,9 @@ jobs:
             kubectl get nodes
 
       - name: Helm Install
-        run: helm install printrevo-infra ./helm
+        run: |
+          if helm status printrevo-infra >/dev/null 2>&1; then
+            helm upgrade printrevo-infra ./helm
+          else
+            helm install printrevo-infra ./helm
+          fi
