--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-    - host: {{ .Values.ingress.hosts[0] }}
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
           - path: /
