--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -104,8 +104,9 @@ jobs:
 
       - name: Helm Install
         run: |
-          if helm status printrevo-infra >/dev/null 2>&1; then
-            helm upgrade printrevo-infra ./helm
-          else
-            helm install printrevo-infra ./helm
-          fi
+          helm upgrade --install infra-base --namespace infrastructure
+          # if helm status printrevo-infra >/dev/null 2>&1; then
+          #   helm upgrade printrevo-infra ./helm
+          # else
+          #   helm install printrevo-infra ./helm
+          # fi
