--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,38 +73,38 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-      - name: Get AWS Resources List 
-        run: aws resourcegroupstaggingapi get-resources --tag-filters Key=Environment,Values=dev --output json | jq -r '.ResourceTagMappingList[].ResourceARN'
+      # - name: Get AWS Resources List 
+      #   run: aws resourcegroupstaggingapi get-resources --tag-filters Key=Environment,Values=dev --output json | jq -r '.ResourceTagMappingList[].ResourceARN'
 
-      - name: Get Terraform States
-        run: terraform state list
+      # - name: Get Terraform States
+      #   run: terraform state list
 
-      - name: Set execute permission for the import script
-        run: chmod +x ./bin/terraform-import.sh
+      # - name: Set execute permission for the import script
+      #   run: chmod +x ./bin/terraform-import.sh
 
-      - name: Import Modules Services by Environment Tag
-        run: ./bin/terraform-import.sh dev printrevo-terraform '${{ secrets.GH_PAT }}' '${{ secrets.AWS_REGION }}' '${{ secrets.AWS_ACCESS_KEY_ID }}' '${{ secrets.AWS_SECRET_ACCESS_KEY }}' '${{ steps.ssm.outputs.db_password }}' || echo "Import script failed but continuing..."
+      # - name: Import Modules Services by Environment Tag
+      #   run: ./bin/terraform-import.sh dev printrevo-terraform '${{ secrets.GH_PAT }}' '${{ secrets.AWS_REGION }}' '${{ secrets.AWS_ACCESS_KEY_ID }}' '${{ secrets.AWS_SECRET_ACCESS_KEY }}' '${{ steps.ssm.outputs.db_password }}' || echo "Import script failed but continuing..."
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
 
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan -var aws_profile=printrevo-terraform -var github_token='${{ secrets.GH_PAT }}' -var aws_region='${{ secrets.AWS_REGION }}' -var aws_access_key_id='${{ secrets.AWS_ACCESS_KEY_ID }}' -var aws_access_secret_key='${{ secrets.AWS_SECRET_ACCESS_KEY }}' -var rds_password='${{ steps.ssm.outputs.db_password }}'
+      # - name: Terraform Plan
+      #   run: terraform plan -out=tfplan -var aws_profile=printrevo-terraform -var github_token='${{ secrets.GH_PAT }}' -var aws_region='${{ secrets.AWS_REGION }}' -var aws_access_key_id='${{ secrets.AWS_ACCESS_KEY_ID }}' -var aws_access_secret_key='${{ secrets.AWS_SECRET_ACCESS_KEY }}' -var rds_password='${{ steps.ssm.outputs.db_password }}'
 
-      - name: Set execute permission for the apply script
-        run: chmod +x ./bin/terraform-apply.sh
+      # - name: Set execute permission for the apply script
+      #   run: chmod +x ./bin/terraform-apply.sh
 
-      - name: Run Terraform Apply
-        run: ./bin/terraform-apply.sh
+      # - name: Run Terraform Apply
+      #   run: ./bin/terraform-apply.sh
        
-      - name: Configure kubectl for EKS
-        run: |
-            aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name printrevo-dev-eks
-            kubectl get nodes
+      # - name: Configure kubectl for EKS
+      #   run: |
+      #       aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name printrevo-dev-eks
+      #       kubectl get nodes
 
       - name: Helm Install
         run: |
-          helm upgrade --install infra-base --namespace infrastructure
+          helm upgrade --install printrevo-infra ./helm --namespace infrastructure
           # if helm status printrevo-infra >/dev/null 2>&1; then
           #   helm upgrade printrevo-infra ./helm
           # else
