--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -104,7 +104,7 @@ jobs:
 
       - name: Helm Install
         run: |
-          helm upgrade --install printrevo-infra ./helm --namespace infrastructure
+          helm upgrade --install printrevo-infra ./helm --namespace infrastructure --create-namespace
           # if helm status printrevo-infra >/dev/null 2>&1; then
           #   helm upgrade printrevo-infra ./helm
           # else
