--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -14,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ .Values.service.name }}
+                name: {{ .Values.app.name }}
                 port:
                   number: {{ .Values.service.port }}
