--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -6,9 +6,10 @@ metadata:
   labels:
     app: {{ .Values.app.name }}
 spec:
-  type: {{ .Values.service.type }}
+  type: NodePort
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.containerPort }}
+      nodePort: {{ .Values.service.port }}
   selector:
     app: {{ .Values.app.name }}
