--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -7,7 +7,8 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-    - http:
+    - host: {{ .Values.ingress.host }}
+      http:
         paths:
           - path: /
             pathType: Prefix
