--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -4,7 +4,20 @@ metadata:
   name: {{ .Values.app.name }}
   namespace: {{ .Values.app.namespace }}
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    # alb.ingress.kubernetes.io/subnets: 
+#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+#     alb.ingress.kubernetes.io/certificate-arn: {{ .Values.ingress.certificateArn }}
+#     alb.ingress.kubernetes.io/ssl-redirect: '443'
+#     alb.ingress.kubernetes.io/healthcheck-path: /health
+#     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
+#     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
+#     alb.ingress.kubernetes.io/healthcheck-healthy-threshold-count: '2'
+#     alb.ingress.kubernetes.io/healthcheck-unhealthy-threshold-count: '2'
+#     alb.ingress.kubernetes.io/healthcheck-port: '80'
+#     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
 spec:
   rules:
     - host: {{ .Values.ingress.host }}
