--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -109,11 +109,15 @@ jobs:
 
       - name: "Install AWS ALB"
         run: |
-          helm install aws-load-balancer-controller eks/aws-load-balancer-controller \
-            -n kube-system \
-            --set clusterName=printrevo-dev-eks \
-            --set serviceAccount.create=false \
-            --set serviceAccount.name=aws-load-balancer-controller
+          if ! helm list -n kube-system | grep -q aws-load-balancer-controller; then
+            helm install aws-load-balancer-controller eks/aws-load-balancer-controller \
+              -n kube-system \
+              --set clusterName=printrevo-dev-eks \
+              --set serviceAccount.create=false \
+              --set serviceAccount.name=aws-load-balancer-controller
+          else
+            echo "AWS ALB is already installed."
+          fi
 
       - name: Helm Install
         run: |
