--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -119,6 +119,10 @@ jobs:
             echo "AWS ALB is already installed."
           fi
 
+      - name: Wait for AWS Load Balancer Controller webhook service
+        run: |
+          kubectl wait --namespace kube-system --for=condition=Available deployment/aws-load-balancer-controller --timeout=120s
+
       - name: Helm Install
         run: |
           helm upgrade --install printrevo-infra ./helm --namespace infrastructure --create-namespace
